statusfy/overlays/cnv-prod/route.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: statusfy-thoth-station-ninja
spec:
    host: status.thoth-station.ninja
    to:
        kind: Service
        name: statusfy-thoth-station-ninja
    tls:
        caCertificate: |
            -----BEGIN CERTIFICATE-----
            MIIEZTCCA02gAwIBAgIQQAF1BIMUpMghjISpDBbN3zANBgkqhkiG9w0BAQsFADA/
[...]
            UdHkhVNcsAKX1H7GNNLOEADksd86wuoXvg==
            -----END CERTIFICATE-----
        certificate: |
            -----BEGIN CERTIFICATE-----
            MIIFOzCCBCOgAwIBAgISBNB0l/cjvxRfrTLH5Jb2ci5sMA0GCSqGSIb3DQEBCwUA
[...]
            -----END CERTIFICATE-----
        key: |
            -----BEGIN PRIVATE KEY-----
            MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQChl3aDsKn2Motj
[...]
            zhzYADP0V17WFufnlEfvAALx6A==
            -----END PRIVATE KEY-----
        termination: edge
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-01-21T07:47:27Z'
    mac: ENC[AES256_GCM,data:Ylpg8leZzXxwwJKsYe+Bgc6hKS0wS/a2kgkqNiYRPKmrQg3tJ0bsoRMzUVOid511/8t3k6GkyhlFoZsDIgmqYlkWba846pUS+NVuaVSRV6E0lEXQS+4NKW/gwC5ar1MbR8TlBKMQMAc7Ukjmpn1wS61kWq3SLIb8/l+CmkHvWps=,iv:YbPHGOv5bLxuRN+uJaccDI8lySnTdrpvuk+ZXYOKbt4=,tag:SxnMPjhlsMuSl9Scmy7Wcw==,type:str]
    pgp:
    -   created_at: '2021-01-21T07:47:26Z'
        enc: |-
            -----BEGIN PGP MESSAGE-----

            wcFMA1gbAjViyxWYARAAIeG18OZ+RUxcSKqLD33ti5DPlwbwR2YFmDScdO55NFtv
[...]
            KskA
            =3Ygv
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-01-21T07:47:26Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf8DzAR9jn5uexsiya8xxS2q5D19KHexz/Ot1dNpGH0zY2q
[...]
            rjXUHlCGhbuutjdgDX3rAjTGt8eYxQk5zMyMpvsm/w==
            =7i+u
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-01-21T07:47:26Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAmrI+FxyVcuhMePAh+b9rXI0TIITARj+6Ipasj88QaRZz
[...]
            2GSnRYvNxfeUkEeMkhat1XI2s7AzHFjzsMezkxkDCQ==
            =uJUs
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-01-21T07:47:26Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA7vMDF1jUn3mAQ//VslZyr3b30hmeM7Qk2L9tMExQnSP2EDCKmzBCQUKNCma
[...]
            =vQv4
            -----END PGP MESSAGE-----
        fp: 68BD1529A372C8BA561C9DDC377298152D08B95B
    encrypted_regex: ^(data|stringData)$
    version: 3.5.0
